# wmtp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHECKPOINT_MANAGEMENT_PLAN.md  CONTRIBUTING.md  Dockerfile  LICENSE  METADATA_LOADER_REFACTORING_PLAN.md  Makefile  README.md  VESSL_GPU_FEASIBILITY_REPORT.md  WMTP_IMPROVEMENT_PLAN.md  WMTP_MTP_DATA_COLLATOR_FIX_PLAN.md  analyze_wmtp_performance.py  mypy.ini  optimize_system_memory.py  pyproject.toml  run_quick_experiment.py  test_component_loading.py  test_cpu_model_loading.py  test_critic_integration.py  test_log_interval_fix.py  test_m3_pipeline.py  training_log.txt  training_log_v2.txt
.github/: CI-CD-GUIDE.md  README.md
.github/workflows/: docker-build-push.yml  test-algorithms.yml
configs/: config.critic_wmtp.yaml  config.example.yaml  config.experiment.yaml  config.local.yaml  config.m3_test.yaml  config.mtp_baseline.yaml  config.production.yaml  config.rho1_wmtp.yaml  config.s3.yaml  config.vessl.yaml  recipe.baseline_quick.yaml  recipe.critic.yaml  recipe.critic_quick.yaml  recipe.critic_wmtp.yaml  recipe.example.yaml  recipe.m3_test.yaml  recipe.mtp_baseline.yaml  recipe.rho1.example.yaml  recipe.rho1.yaml  recipe.rho1_quick.yaml  recipe.rho1_wmtp.yaml  recipe.rho1_wmtp_tokenskip.yaml  recipe.rho1_wmtp_weighted.yaml  vessl.yaml
datasets/contest/: test.json  train.json
datasets/mbpp/: test.json  train.json  validation.json
docker/: .dockerignore  Dockerfile  README.md  vessl.yaml
docs/: BLUEPRINT.md  CRITIC_WMTP_GRADIENT_FIX_PLAN.md  DEPLOYMENT.md  DEV_PLANS.md  DEV_PRINCIPLE.md  KOREAN_DOCUMENTATION_STRATEGY.md  LOADER_UNIFICATION_PLAN.md  LOADER_UTILS_REFACTOR_PLAN.md  M3_TEST_SETUP.md  MPS_OPTIMIZATION_PLAN.md  MYPY_RESOLUTION_PLAN.md  PHASE8_EXECUTION_PLAN.md  PHASE9_IMPLEMENTATION_PLAN.md  PHASE_D_KOREAN_DOCUMENTATION_STRATEGY.md  PRODUCTION_DEPLOYMENT_PLAN.md  README_UPDATE_PLAN.md  S3_STRUCTURE.md  WMTP_FULL_CONVERSION_PLAN.md  WMTP_REFACTORING_PLAN.md  WMTP_시스템_아키텍처.md  WMTP_종합분석보고서.md  WMTP_학술_연구제안서.md  checkpoint_mlflow_separation_plan.md  componentfactory-recipe-config-integration-plan.md  console_output_standardization_plan.md  early_stopping_implementation_plan.md  fix_plan_early_stopping_loss_only.md  meta_evaluation_implementation_plan.md  parallelism_refactoring_plan.md  phases.md  s3-tokenizer-refactoring-plan.md  stage2_num_epochs_implementation_plan.md  system_analysis_report.md  wmtp-pipeline-refactoring-final-plan.md  연구개선안.md  연구제안서.md  현황분석보고서.md
mlflow_runs/0/: meta.yaml
mlflow_runs/674261730469747670/: meta.yaml
models_backup/7b_1t_4/: params.json
scripts/: build_push.sh  create_metadata_only.py  download_resources.py  migrate_to_unified.py  optimized_s3_downloader.py  s3_fast_download.py  s3_inplace_standardize.py  s3_model_pipeline.py  s3_rename_models.py  s3_rename_simple.py  s3_standardize_all.py  safe_s3_download.py  setup_models_datasets.py  standardize_local_only.py  standardize_models.py  standardize_s3_single.py  vessl_deploy.sh
src/: __init__.py
src/cli/: __init__.py  (+3 more)
stubs/: __init__.py  datasets.pyi  sentencepiece.pyi
tests/: README.md  __init__.py  test_early_stopping.py  test_evaluation_mlflow.py  test_evaluator_meta_mtp.py  test_loaders.py  test_mps_integration.py  test_mps_large_scale.py  test_mps_optimizer.py  test_mps_pipeline.py  test_path_resolver.py  test_phase1_integration.py  test_phase2_evaluators.py  test_phase2_integration.py  test_phase3_mlflow_integration.py  test_pretrainer_integration.py  test_recipe_schema.py  test_scorer_integration.py  test_scorer_weights.py  test_trainer_alignment.py  test_trainer_smoke.py  test_trainer_smoke_h1.py  test_unified_loaders.py  test_unified_system.py  test_vessl_gpu_environment.py  verify_phase3.py  verify_phase4.py
(+180 files in other folders)
